Add PHPUnit configuration and sample test setup
- Created phpunit.xml.dist for PHPUnit configuration.
- Added bootstrap.php to initialize the testing environment.
- Implemented a sample test case in test-sample.php to verify basic functionality.

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
             "WPFlashNotes\\": "includes/"
         }
     },
+    "require": {
+        "php": "^8.0"
+    },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.1",
         "wp-coding-standards/wpcs": "^3.2",
-        "phpcompatibility/phpcompatibility-wp": "^2.1"
+        "phpcompatibility/phpcompatibility-wp": "^2.1",
+        "phpunit/phpunit": "^9.6"
     },
     "config": {
         "allow-plugins": {
