Add lint scripts to composer and lint fix

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,9 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "scripts": {
+        "lint": "phpcs --standard=WordPress ./includes ./wp-flashnotes.php",
+        "fix": "phpcbf --standard=WordPress ./includes ./wp-flashnotes.php"
     }
 }
